# AlberFlowy

./: .gitignore  Albert-Plugin-Docs-Notes.md  README.md  WorkFlowyClient.py  Workflowy.js  build.sh  error.txt  index.html  index.js  install.sh  package-lock.json  package.json  requests.js  wf.js  workflowy-auth.js
albert-plugin/: CMakeLists.txt  build.sh  install.sh  metadata.json  run.sh  test.cpp
albert-plugin/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
albert-plugin/api/: workflowy-cli.js  workflowy.js
albert-plugin/src/: plugin.cpp  plugin.h
api/: PrivacyPolicy.html  PrivacyPolicy.md  google_credentials.json  index.js  package-lock.json  package.json  workflowy-auth.js  workflowy-cli.js  workflowy.js
config/: config.js
package-workflowy-src/: client.ts  deps.ts  document.ts  schema.ts
src/: plugin.cpp  plugin.h  tree_data.json
utils/: clientId.js
